# integration-tests

./: .gitignore  Cargo.toml  README.md  docker-compose.test.yml
scripts/: perf-report.mjs  run-all.sh  wait-for-services.sh
tests/e2e/: package.json  perf-reporter.cjs  playwright.config.ts  tsconfig.json
tests/e2e/tests/: auth.spec.ts  helpers.ts  messaging.spec.ts  multi-user.spec.ts  perf.cjs  threads-reactions.spec.ts  transport.spec.ts  workspace-channels.spec.ts
tests/rust/: Cargo.toml
tests/rust/src/: fixtures.rs  http_client.rs  lib.rs  perf.rs  ws_client.rs  wt_client.rs
tests/rust/tests/: auth_contract.rs  channel_contract.rs  gateway_protocol.rs  message_flow.rs  reactions.rs  threads.rs  workspace_contract.rs
