[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wire-protocol = { path = "../../../wire-protocol" }
messenger-core = { path = "../../../messenger-core" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ulid = "1"
bytes = "1"
url = "2"
rand = "0.8"
